--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
 
-
+  <div class="col">
   <!-- Big box with an identifiable id -->
 <div class="box">
   <img src="img/MOTOYB.png" alt="About Me" class="about-me-header" id="bigImage">
@@ -46,6 +46,7 @@
   </div>
   <div class="mini-box">
       <img src="img/RAPTEE.png" alt="About Me" data-big-image="img/RAPTEE.png" class="mini-image">
+    </div>
   </div>
 </div>
      
